run with modern java task